Changes Index file

--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
 
 <header class="header">
 
-    <a href="#" class="logo">
+    <a href="/index.html" class="logo">
     <img src="./image/Satnam_coolers_logo.png" alt="Satnam Logo">
     </a>
 
     <nav class="navbar">
-        <a href="#home">home</a>
-        <a href="#features">features</a>
-        <a href="#products">products</a>
-        <a href="#categories">categories</a>
-        <a href="#review">review</a>
-        <a href="#blogs">blogs</a>
+        <a href="/index.html">home</a>
+        <a href="/index.html">features</a>
+        <a href="/index.html">products</a>
+        <a href="/index.html">categories</a>
+        <a href="/index.html">review</a>
+        <a href="/index.html">blogs</a>
     </nav>
 
     <div class="icons">
