--- a/footer.html
+++ b/footer.html
@@ -152,7 +152,9 @@ body{
     background: var(--orange);
     color:#fff;
 }
-
+.share{
+    margin-left:11px;
+}
 /* media queries */
 @media (max-width:991px){
     html{
@@ -184,38 +186,27 @@ body{
                 <img src="./image/Satnam_coolers_logo.png" class="logo">
                 <p></p>
                 <div class="share">
-                    <a href="#" class="fab fa-facebook-f"></a>
-                    <a href="#" class="fab fa-twitter"></a>
-                    <a href="#" class="fab fa-instagram"></a>
-                    <a href="#" class="fab fa-linkedin"></a>
+                    <a href="https://www.facebook.com/satnamcoolers/" class="fab fa-facebook-f"></a>
+                    <a href="https://www.instagram.com/satnamcoolers/?hl=en" class="fab fa-instagram"></a>
                 </div>
             </div>
 
             <div class="box">
                 <h3>contact info</h3>
-                <a href="#" class="links"> <i class="fas fa-phone"></i> +91 8853455765 </a>
-                <a href="#" class="links"> <i class="fas fa-phone"></i> +91 9140026484 </a>
-                <a href="#" class="links"> <i class="fas fa-envelope"></i> kapilyadav001144@gmail.com </a>
-                <a href="#" class="links"> <i class="fas fa-map-marker-alt"></i> Greater Noida, india - 201306 </a>
+                <a href="#" class="links"> <i class="fas fa-phone"></i> +91 9356214462 </a>
+                <a href="#" class="links"> <i class="fas fa-phone"></i> +91 7122711037 </a>
+                <a href="#" class="links"> <i class="fas fa-envelope"></i> satnamtraders23@gmail.com </a>
+                <a href="#" class="links"> <i class="fas fa-map-marker-alt"></i>10 & 6 Ishwar Nagar Square, Hasanbag Road, New Nandanvan, Nagpur - 440009</a>
             </div>
 
             <div class="box">
                 <h3>quick links</h3>
-                <a href="#" class="links"> <i class="fas fa-arrow-right"></i> home </a>
-                <a href="#" class="links"> <i class="fas fa-arrow-right"></i> features </a>
-                <a href="#" class="links"> <i class="fas fa-arrow-right"></i> products </a>
-                <a href="#" class="links"> <i class="fas fa-arrow-right"></i> categories </a>
-            </div>
-
-            <div class="box">
-                <h3>newsletter</h3>
-                <p>subscribe for latest updates</p>
-                <input type="email" placeholder="your email" class="email">
-                <input type="submit" value="subscribe" class="btn">
-                <img src="image/payment.png" class="payment-img" alt="">
+                <a href="#home" class="links"> <i class="fas fa-arrow-right"></i> home </a>
+                <a href="#features" class="links"> <i class="fas fa-arrow-right"></i> features </a>
+                <a href="#products" class="links"> <i class="fas fa-arrow-right"></i> products </a>
+                <a href="#categories" class="links"> <i class="fas fa-arrow-right"></i> categories </a>
             </div>
         </div>
     </section>
-    <!-- footer section ends -->
 </body>
 </html>
