--- a/index.html
+++ b/index.html
@@ -17,79 +17,9 @@
 </head>
 <body>
     
-<!-- header section starts  -->
 
-<!-- <div id="site-header"></div> -->
-<!-- <header class="header">
-
-    <a href="/index.html" class="logo">
-    <img src="./image/Satnam_coolers_logo.png" alt="Satnam Logo">
-    </a>
-
-    <nav class="navbar">
-        <a href="/index.html">home</a>
-        <a href="/index.html">features</a>
-        <a href="/index.html">products</a>
-        <a href="/index.html">categories</a>
-        <a href="/index.html">review</a>
-        <a href="/index.html">blogs</a>
-    </nav>
-
-    <div class="icons">
-        <div class="fas fa-bars" id="menu-btn"></div>
-        <div class="fas fa-search" id="search-btn"></div>
-        <div class="fas fa-shopping-cart" id="cart-btn"></div>
-        <div class="fas fa-user" id="login-btn"></div>
-    </div>
-
-    <form action="" class="search-form">
-        <input type="search" id="search-box" placeholder="search here...">
-        <label for="search-box" class="fas fa-search"></label>
-    </form>
-
-    <div class="shopping-cart">
-        <div class="box">
-            <i class="fas fa-trash"></i>
-            <img src="image/cart-img-1.png" alt="">
-            <div class="content">
-                <h3>watermelon</h3>
-                <span class="price">$4.99/-</span>
-                <span class="quantity">qty : 1</span>
-            </div>
-        </div>
-        <div class="box">
-            <i class="fas fa-trash"></i>
-            <img src="image/cart-img-2.png" alt="">
-            <div class="content">
-                <h3>onion</h3>
-                <span class="price">$4.99/-</span>
-                <span class="quantity">qty : 1</span>
-            </div>
-        </div>
-        <div class="box">
-            <i class="fas fa-trash"></i>
-            <img src="image/cart-img-3.png" alt="">
-            <div class="content">
-                <h3>chicken</h3>
-                <span class="price">$4.99/-</span>
-                <span class="quantity">qty : 1</span>
-            </div>
-        </div>
-        <div class="total"> total : $19.69/- </div>
-        <a href="#" class="btn">checkout</a>
-    </div>
-
-    <form action="" class="login-form">
-        <h3>login now</h3>
-        <input type="email" placeholder="your email" class="box">
-        <input type="password" placeholder="your password" class="box">
-        <p>forget your password <a href="#">click here</a></p>
-        <p>don't have an account <a href="#">create now</a></p>
-        <input type="submit" value="login now" class="btn">
-    </form>
-</header> -->
  <header class="header">
-        <a href="#" class="logo">
+        <a href="index.html" class="logo">
             <img src="./image/Satnam_coolers_logo.png" alt="Satnam Logo">
         </a>
 
@@ -414,7 +344,7 @@
 
 </section>
 
-<!-- review section ends -->
+
 
 <!-- blogs section starts  -->
 
@@ -470,36 +400,7 @@
 </section>
 
 <div id="site-footer"></div>
-<!-- blogs section ends -->
 
-<!-- footer section starts  -->
-
-  <!-- <section class="footer">
-        <div class="box-container">
-            <div class="box">
-                <img src="./image/Satnam_coolers_logo.png" class="logo">
-                <p></p>
-                <div class="share">
-                    <a href="#" class="fab fa-facebook-f"></a>
-                    <a href="#" class="fab fa-twitter"></a>
-                    <a href="https://www.instagram.com/satnamcoolers?igsh=MndzaHR2MGw5ejFx" class="fab fa-instagram"></a>
-                    <a href="#" class="fab fa-linkedin"></a>
-                </div>
-            </div>
-
-            <div class="box">
-                <h3>contact info</h3>
-                <a href="#" class="links"> <i class="fas fa-phone"></i> +91 9356214462 </a>
-                <a href="#" class="links"> <i class="fas fa-phone"></i> +91 7122711037 </a>
-                <a href="#" class="links"> <i class="fas fa-envelope"></i> satnamtraders23@gmail.com </a>
-                <a href="#" class="links"> <i class="fas fa-map-marker-alt"></i>10 & 6 Ishware Nagar Square, Hasanbag Road,<> New Nandanvan, Nagpur - 440009</a>
-            </div>
-
-            
-        </div>
-    </section> -->
-
-<!-- footer section ends -->
 <script>
 // Utility function to load external HTML into a container
 function loadHTML(containerId, filePath) {
